--- a/Workbook_C_Machine_Learning.ipynb
+++ b/Workbook_C_Machine_Learning.ipynb
@@ -663,7 +663,8 @@
         "id": "72da77aa"
       },
       "source": [
-        "install.packages(\"caTools\")"
+        "install.packages(\"caTools\")\n",
+        "install.packages(\"e1071\")"
       ],
       "id": "72da77aa",
       "execution_count": null,
@@ -675,7 +676,8 @@
         "id": "3cb15146"
       },
       "source": [
-        "library(caTools)"
+        "library(caTools)\n",
+        "library(e1071)"
       ],
       "id": "3cb15146",
       "execution_count": null,
@@ -690,6 +692,19 @@
         "This library contains many functions, but, most important, it has a function for logistic regression: `LogitBoost`. First, you need to give the model the label against which we want to predict as well as the data that you want to use for training the model:"
       ],
       "id": "501856a3"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Label.train = train[,9]\n",
+        "Data.train = train[,-9]"
+      ],
+      "metadata": {
+        "id": "tnux4pRvFBoD"
+      },
+      "id": "tnux4pRvFBoD",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
