--- a/Workbook_A.ipynb
+++ b/Workbook_A.ipynb
@@ -90,7 +90,7 @@
         "id": "wde9vOUTxFMK"
       },
       "source": [
-        "This should print out `Hello world` if it does not ask for [Help with programming](https://canvas.anglia.ac.uk/courses/1490/pages/help-with-programming) on ARU Canvas."
+        "This should print out `Hello world` if it does not ask for help."
       ]
     },
     {
